--- a/claims/templates/claims/base_generic.html
+++ b/claims/templates/claims/base_generic.html
@@ -72,7 +72,7 @@
             {% endif %}
               {% if user.is_authenticated and not user.is_staff%}
               <li class="nav-item">
-              <a class="nav-link" href="/claims/claims">Reclamaciones <span class="sr-only"></span></a>
+                <a class="nav-link" href="/reviews/reviews">Opiniones <span class="sr-only"></span></a>
               </li>
               {% endif %}
               {% if user.is_staff %}
