--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -75,6 +75,9 @@
 	      <li class="nav-item active">
 	        <a class="nav-link" href="{% url 'catalog' %}">Catálogo <span class="sr-only">(current)</span></a>
 	      </li>
+		  <li class="nav-item active">
+	        <a class="nav-link" href="/reviews/reviews/">Opiniones <span class="sr-only">(current)</span></a>
+	      </li>
 		  <li class="nav-item dropdown">
 			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				Productos
