--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -5,7 +5,12 @@
   <div class="row">
     <div class="col-md-6">
       <h1>{{ product.name }}</h1>
-      <img src="{{ product.imageURL }}" alt="{{ product.name }}" class="img-fluid mb-3">
+      <div class="image-container">
+        <img src="{{ product.imageURL }}" alt="{{ product.name }}" class="img-fluid mb-3 {% if product.stock_no == 0 %}out-of-stock{% endif %}">
+        {% if product.stock_no == 0 %}
+          <p class="out-of-stock-label">AGOTADO</p>
+        {% endif %}
+      </div>
       <p>{{ product.description }}</p>
     </div>
     <div class="col-md-6">
@@ -19,7 +24,9 @@
             <li class="list-group-item"><strong>En stock:</strong> {{ product.stock_no }}</li>
           </ul>
           <div class="mt-3">
+            {% if product.stock_no > 0 %}
             <button data-product="{{product.id}}" data-action="add" data-url="{% url 'update_item' %}" class="btn btn-outline-secondary add-btn update-cart">Añadir al carrito</button>
+            {% endif %}
             {% if user.is_staff %}
             <a class="btn btn-dark ml-2" href="edit/">Editar</a>
             {% endif %}
@@ -30,8 +37,30 @@
     </div>
   </div>
 </div>
-<!-- Los scripts de Bootstrap y jQuery -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-{% endblock %}
+
+<style>
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+.out-of-stock {
+            opacity: 0.5; /* Reducir opacidad */
+            filter: grayscale(80%); /* Convertir a escala de grises */
+        }
+        
+        .out-of-stock-label {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 24px;
+            color: red;
+            font-weight: bold;
+        }
+    
+        /* Asegura que la imagen esté posicionada de manera relativa para que el texto AGOTADO esté sobre ella */
+        .position-relative {
+            position: relative;
+        }
+</style>
+{% endblock content %}
