--- a/reviews/templates/edit_review.html
+++ b/reviews/templates/edit_review.html
@@ -1,17 +1,18 @@
 {% extends 'base_generic.html' %}
 {% block content %}
   <div class="container mt-5">
-    <h1>Añadir Opinión</h1>
+    <h1>Editar Opinión</h1>
 
+  
     <form method="POST" onsubmit="return validateForm()">
       {% csrf_token %}
       <div class="form-group">
         <label for="title">Título:</label>
-        <input type="text" class="form-control" id="title" name="title" required>
+        <input type="text" class="form-control" id="title" name="title" value="{{ review.title }}" required>
       </div>
       <div class="form-group">
         <label for="content">Opinión:</label>
-        <textarea class="form-control" id="content" name="content" rows="4" required></textarea>
+        <textarea class="form-control" id="content" name="content" rows="4" required>{{ review.content }}</textarea>
       </div>
       <div class="form-group">
         <label for="rating">Puntuación:</label>
@@ -21,7 +22,7 @@
           <i class="far fa-star" data-rating="3"></i>
           <i class="far fa-star" data-rating="4"></i>
           <i class="far fa-star" data-rating="5"></i>
-          <input type="hidden" name="rating" id="rating" value="0">
+          <input type="hidden" name="rating" id="rating" value="{{ review.rating }}">
         </div>
       </div>
       <button id="submitButton" class="btn btn-primary btn-lg" type="submit" disabled>Guardar cambios</button>
