--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -75,9 +75,6 @@
 	      <li class="nav-item active">
 	        <a class="nav-link" href="{% url 'catalog' %}">Catálogo <span class="sr-only">(current)</span></a>
 	      </li>
-		  <li class="nav-item active">
-	        <a class="nav-link" href="/reviews/reviews/">Opiniones <span class="sr-only">(current)</span></a>
-	      </li>
 		  <li class="nav-item dropdown">
 			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				Productos
@@ -116,6 +113,9 @@
 			  <a class="nav-link" href="{% url 'guest_orders' %}">Todos los pedidos</a>
 		  </li>
 	 	 {% endif %}
+		  <li class="nav-item">
+	        <a class="nav-link" href="/reviews/reviews/">Opiniones <span class="sr-only"></span></a>
+	      </li>
 		  {% if user.is_authenticated and not user.is_staff%}
 		  <li class="nav-item">
 			<a class="nav-link" href="/claims/claims">Reclamaciones <span class="sr-only"></span></a>
