--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -70,6 +70,9 @@
               <a class="nav-link" href="{% url 'guest_orders' %}">Todos los pedidos</a>
             </li>
             {% endif %}
+            <li class="nav-item">
+              <a class="nav-link" href="/reviews/reviews/">Opiniones <span class="sr-only"></span></a>
+            </li>
             {% if user.is_authenticated and not user.is_staff%}
             <li class="nav-item">
             <a class="nav-link" href="/claims/claims">Reclamaciones <span class="sr-only"></span></a>
